--- a/chrome/BUILD.gn
+++ b/chrome/BUILD.gn
@@ -250,6 +250,8 @@ if (!is_android && !is_mac) {
       sources += [ "app/chrome_exe_main_aura.cc" ]
     }
 
+    deps += ["//iridium:trknotify"]
+
     if (is_linux) {
       sources += [
         "app/chrome_dll_resource.h",
@@ -469,6 +471,7 @@ if (is_win) {
         "//content/public/app:child",
         "//content/public/common:service_names",
         "//headless:headless_shell_child_lib",
+        "//iridium:trknotify",
         "//services/service_manager/embedder",
       ]
 
